welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:5: error: not found: value estSurBuggle
    if (estSurBuggle()) {
        ^