welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var cpt: Int = 0;
do {
  while (!crossing()) {
    avance();
    if (estSurBuggle()) {
      cpt = cpt + 1;
    }
  }
  if (cpt >= 3) {
    gauche();
  } else {
    droite();
  }
  cpt = 0;
} while (!sortieTrouvee())
avance();